# duktape-vs-lua

./: CMakeLists.txt  duktapebench.cpp  luabench.cpp
duktape/include/: duk_config.h  duk_source_meta.json  duktape.c
lua/lua-5.4.4/src/: lua  luac
